// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_repr.adt.numeric;

message ProtoNumericMaxScale {
    uint32 value = 1;
}

// Helper struct for representing `Option<NumericMaxScale>`.
message ProtoOptionalNumericMaxScale {
    ProtoNumericMaxScale value = 1;
}
